--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,10 @@
 	<artifactId>aws-cloudwatch-exts-commons</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>AWS Cloudwatch Commons</name>
+	
+	<properties>
+		<release.repo.local.dir>../maven-repo</release.repo.local.dir>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -57,6 +61,106 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<altDeploymentRepository>releases::default::file:${release.repo.local.dir}/releases</altDeploymentRepository>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>external.atlassian.jgitflow</groupId>
+				<artifactId>jgitflow-maven-plugin</artifactId>
+				<version>1.0-m3</version>
+			</plugin>
+		</plugins>
+	</build>
+
+	<profiles>
+		<profile>
+			<id>upload-release-repo</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>1.4.0</version>
+						<executions>
+							<execution>
+								<id>git-add-changes</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>git</executable>
+									<arguments>
+										<argument>--git-dir=${release.repo.local.dir}/.git</argument>
+										<argument>--work-tree=${release.repo.local.dir}/</argument>
+										<argument>add</argument>
+										<argument>releases/*/${project.artifactId}/*</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							<execution>
+								<id>git-commit-changes</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>git</executable>
+									<arguments>
+										<argument>--git-dir=${release.repo.local.dir}/.git</argument>
+										<argument>--work-tree=${release.repo.local.dir}/</argument>
+										<argument>commit</argument>
+										<argument>-a</argument>
+										<argument>-m</argument>
+										<argument>"Added ${project.artifactId} ${project.version} release"</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							<execution>
+								<id>git-push-changes</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>git</executable>
+									<arguments>
+										<argument>--git-dir=${release.repo.local.dir}/.git</argument>
+										<argument>--work-tree=${release.repo.local.dir}/</argument>
+										<argument>push</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<url>https://github.com/Appdynamics/maven-repo/raw/master/releases</url>
+		</repository>
+	</distributionManagement>
 	
 	<repositories>
 		<repository>
@@ -73,6 +177,9 @@
 
 	<scm>
 		<connection>scm:git:https://github.com/Appdynamics/aws-cloudwatch-exts-commons.git</connection>
+		<developerConnection>scm:git:https://github.com/Appdynamics/aws-cloudwatch-exts-commons.git</developerConnection>
+		<url>https://github.com/Appdynamics/aws-cloudwatch-exts-commons</url>
+		<tag>HEAD</tag>
 	</scm>
 
 </project>
