--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,10 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
-        <dependency>
+		<dependency>
 			<groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
-            <version>1.6.8</version>
+			<artifactId>aws-java-sdk-cloudwatch</artifactId>
+			<version>1.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
