--- a/src/main/resources/conf/config-template.yaml
+++ b/src/main/resources/conf/config-template.yaml
@@ -51,5 +51,18 @@ concurrencyConfig:
   noOfRegionThreadsPerAccount: 3
   noOfMetricThreadsPerRegion: 3
 
+
+regionEndPoints:
+  ap-southeast-1: monitoring.ap-southeast-1.amazonaws.com
+  ap-southeast-2: monitoring.ap-southeast-2.amazonaws.com
+  ap-northeast-1: monitoring.ap-northeast-1.amazonaws.com
+  eu-central-1: monitoring.eu-central-1.amazonaws.com
+  eu-west-1: monitoring.eu-west-1.amazonaws.com
+  us-east-1: monitoring.us-east-1.amazonaws.com
+  us-west-1: monitoring.us-west-1.amazonaws.com
+  us-west-2: monitoring.us-west-2.amazonaws.com
+  sa-east-1: monitoring.sa-east-1.amazonaws.com
+
+
 #prefix used to show up metrics in AppDynamics 
-metricPrefix: "Custom Metrics|Amazon <Namespace>|"
+metricPrefix: "Custom IncludeMetric|Amazon <Namespace>|"
