--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.appdynamics.extensions</groupId>
 	<artifactId>aws-cloudwatch-exts-commons</artifactId>
-	<version>1.0.4</version>
-	<name>AWS Cloudwatch Commons</name>
-	
+	<version>1.0.5-demo</version>
+	<packaging>jar</packaging>
+
+	<name>aws-cloudwatch-exts-commons</name>
+
 	<properties>
 		<release.repo.local.dir>../maven-repo</release.repo.local.dir>
 	</properties>
@@ -23,6 +26,18 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.9</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.21</version>
@@ -30,19 +45,30 @@
 		<dependency>
 			<groupId>com.appdynamics</groupId>
 			<artifactId>appd-exts-commons</artifactId>
-			<version>1.6.0</version>
+			<version>2.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>r09</version>
+			<version>19.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.code.findbugs</groupId>
+					<artifactId>jsr305</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.3</version>
-        </dependency>
-        <dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
@@ -52,6 +78,7 @@
 			<artifactId>aws-java-sdk-cloudwatch</artifactId>
 			<version>1.10.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -70,25 +97,31 @@
 			<version>1.4.7</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.18.2-GA</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.2</version>
 				<configuration>
-					<altDeploymentRepository>releases::default::file:${release.repo.local.dir}/releases</altDeploymentRepository>
+					<altDeploymentRepository>releases::default::file:${release.repo.local.dir}/releases
+					</altDeploymentRepository>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -164,14 +197,14 @@
 			</build>
 		</profile>
 	</profiles>
-	
+
 	<distributionManagement>
 		<repository>
 			<id>releases</id>
 			<url>https://github.com/Appdynamics/maven-repo/raw/master/releases</url>
 		</repository>
 	</distributionManagement>
-	
+
 	<repositories>
 		<repository>
 			<id>github-maven-repo</id>
@@ -187,7 +220,8 @@
 
 	<scm>
 		<connection>scm:git:https://github.com/Appdynamics/aws-cloudwatch-exts-commons.git</connection>
-		<developerConnection>scm:git:https://github.com/Appdynamics/aws-cloudwatch-exts-commons.git</developerConnection>
+		<developerConnection>scm:git:https://github.com/Appdynamics/aws-cloudwatch-exts-commons.git
+		</developerConnection>
 		<url>https://github.com/Appdynamics/aws-cloudwatch-exts-commons</url>
 		<tag>HEAD</tag>
 	</scm>
