--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,12 @@
 		<dependency>
 			<groupId>com.appdynamics</groupId>
 			<artifactId>appd-exts-commons</artifactId>
-			<version>2.0.4</version>
+			<version>2.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.woodstox</groupId>
+			<artifactId>woodstox-core</artifactId>
+			<version>5.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
