--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,14 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
+			<!--TODO provided scope needs to be removed-->
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>1.9</version>
+			<!--TODO provided scope needs to be removed-->
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -102,6 +104,7 @@
 			<version>1.4.7</version>
 			<scope>test</scope>
 		</dependency>
+		<!--TODO Remove the dependency-->
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
