--- a/pom.xml
+++ b/pom.xml
@@ -29,15 +29,11 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
-			<!--TODO provided scope needs to be removed-->
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>1.9</version>
-			<!--TODO provided scope needs to be removed-->
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -104,12 +100,6 @@
 			<version>1.4.7</version>
 			<scope>test</scope>
 		</dependency>
-		<!--TODO Remove the dependency-->
-		<dependency>
-			<groupId>org.javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.18.2-GA</version>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -121,6 +111,14 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<!-- Disabling strict bytecode verification when tests are run to fix the java.lang.VerifyError errors. https://github.com/powermock/powermock/issues/693 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-noverify</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
