--- a/src/main/resources/conf/config-template.yaml
+++ b/src/main/resources/conf/config-template.yaml
@@ -1,56 +1,50 @@
 accounts:
   - awsAccessKey: ""
     awsSecretKey: ""
-    displayAccountName: "" 
-    
+    displayAccountName: ""
+
     # Regions where namespace is registered
-    # Allowed values: ap-southeast-1, ap-southeast-2, ap-northeast-1, eu-central-1, 
+    # Allowed values: ap-southeast-1, ap-southeast-2, ap-northeast-1, eu-central-1,
     #                 us-east-1, eu-west-1, us-west-1, us-west-2, sa-east-1
     #
     regions: ["us-east-1"]
-    
+
 credentialsDecryptionConfig:
     enableDecryption: "false"
-    decryptionKey:
-    
+    encryptionKey:
+
 proxyConfig:
     host:
     port:
     username:
     password:
 
-# Global metrics config for all accounts
-metricsConfig:
+ec2InstanceNameConfig:
+    useNameInMetrics: "true"
+    tagFilterName: "tag-key"
+    tagKey: "Name"
 
-    # By default, all metrics retrieved from cloudwatch are 'Average' values.	
-    # This option allows you to override the metric type. 
-    #
-    # metricName supports regex
-    # Allowed statTypes are: ave, max, min, sum, samplecount
-    #
-    # Note: Irrespective of the metric type, value will still be reported as
-    # Observed value to the Controller
-    metricTypes:
-      - metricName: ""
-        statType: ""
+#EC2 instance for which you want to get the metrics. This is useful when you want to monitor only 1 instance. Keep this empty if you want to monitor all the available instances.
+#Only 1 instance id is acceptable here as AWS CloudWatch API does not support multiple dimension values for the dimension
+ec2Instance: ""
 
-    excludeMetrics: [ ]
+#Filter the instances by tag name. tagValue is optional. if tagValue is not provided, we will fetch all the instances with the tagName.
+tags:
+  - name: "Name"
+    #value: ["tag1", "tag2", "tag3"]
 
-    metricsTimeRange:
-      startTimeInMinsBeforeNow: 5
-      endTimeInMinsBeforeNow: 0
+#Allowed values are Basic and Detailed. Refer https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-cloudwatch-new.html for more information
+# Basic will fire CloudWatch API calls every 5 minutes
+# Detailed will fire CloudWatch API calls every 1 minutes
+cloudWatchMonitoring: "Basic"
 
-    # 
-    # The max number of retry attempts for failed retryable requests 
-    # (ex: 5xx error responses from a service) or throttling errors
-    #
-    maxErrorRetrySize: 0
+#If you want any other interval ( other than the mentioned values in the above configuration ) configure it here, if not leave it empty. This value is in minutes
+cloudWatchMonitoringInterval: 0
 
 concurrencyConfig:
   noOfAccountThreads: 3
   noOfRegionThreadsPerAccount: 3
   noOfMetricThreadsPerRegion: 3
-
 
 regionEndPoints:
   ap-southeast-1: monitoring.ap-southeast-1.amazonaws.com
@@ -63,6 +57,48 @@ regionEndPoints:
   us-west-2: monitoring.us-west-2.amazonaws.com
   sa-east-1: monitoring.sa-east-1.amazonaws.com
 
+# Global metrics config for all accounts
+metricsConfig:
 
-#prefix used to show up metrics in AppDynamics 
-metricPrefix: "Custom IncludeMetric|Amazon <Namespace>|"
+    # By default, all metrics retrieved from cloudwatch are 'Average' values.
+    # This option allows you to override the metric type.
+    #
+    # Allowed statTypes are: ave, max, min, sum, samplecount
+    #
+    # Note: Irrespective of the metric type, value will still be reported as
+    # Observed value to the Controller
+    includeMetrics:
+       - name: "CPUUtilization"
+         alias: "CPUUtilization"
+         statType: "ave"
+         aggregationType: "OBSERVATION"
+         timeRollUpType: "CURRENT"
+         clusterRollUpType: "COLLECTIVE"
+         delta: false
+         multiplier: 1
+      # Time range configuration to individual metrics also supported. If not configured uses the global time range configuration
+    #    metricsTimeRange:
+    #       startTimeInMinsBeforeNow: 15
+    #       endTimeInMinsBeforeNow: 0
+       - name: "NetworkOut"
+       - name: "NetworkIn"
+
+    metricsTimeRange:
+      startTimeInMinsBeforeNow: 10
+      endTimeInMinsBeforeNow: 0
+
+    # Rate limit ( per second ) for GetMetricStatistics, default value is 400. https://docs.aws.amazon.com/AmazonCloudWatch/latest/monitoring/cloudwatch_limits.html
+    getMetricStatisticsRateLimit: 400
+
+    #
+    # The max number of retry attempts for failed retryable requests
+    # (ex: 5xx error responses from a service) or throttling errors
+    #
+    maxErrorRetrySize: 0
+
+#prefix used to show up metrics in AppDynamics. This will create this metric in all the tiers, under this path
+#metricPrefix: "Custom Metrics|Amazon EC2|"
+
+#This will create it in specific Tier/Component. Make sure to replace <COMPONENT_ID> with the appropriate one from your environment.
+#To find the <COMPONENT_ID> in your environment, please follow the screenshot https://docs.appdynamics.com/display/PRO42/Build+a+Monitoring+Extension+Using+Java
+metricPrefix: "Server|Component:<COMPONENT_ID>|Custom Metrics|Amazon EC2|"
