--- a/src/main/resources/conf/config-sample.yaml
+++ b/src/main/resources/conf/config-sample.yaml
@@ -18,6 +18,14 @@ proxyConfig:
     port:
     username:
     password:
+
+dimensions:
+   - name: "LoadBalancerName"
+     displayName: "LoadBalancer Name"
+     values: ["loadBalancer1", "loadBalancer2"]
+   - name: "AvailabilityZone"
+     displayName: "Availability Zone"
+     values: ["us-east-1a", "us-east-1b"]
     
 ec2InstanceNameConfig:
     useNameInMetrics: "true"
