--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.appdynamics.extensions</groupId>
 	<artifactId>aws-cloudwatch-exts-commons</artifactId>
-	<version>2.0.2</version>
+	<version>3.0</version>
 	<packaging>jar</packaging>
 
 	<name>aws-cloudwatch-exts-commons</name>
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>com.appdynamics</groupId>
 			<artifactId>appd-exts-commons</artifactId>
-			<version>2.1.1</version>
+			<version>2.1.1</version> <!-- update to the latest version at the time of release -->
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.woodstox</groupId>
@@ -84,8 +84,25 @@
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-cloudwatch</artifactId>
-			<version>1.10.0</version>
+			<version>1.11.442</version> <!-- was 1.10.0-->
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-core</artifactId>
+			<version>1.11.442</version> <!-- was 1.10.0-->
+		</dependency>
+
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-resourcegroupstaggingapi</artifactId>
+			<version>1.11.426</version>
+		</dependency> <!-- added for tags support -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>junit</groupId>
