--- a/src/main/resources/conf/config-template.yaml
+++ b/src/main/resources/conf/config-template.yaml
@@ -120,6 +120,7 @@ customDashboard:
     # Update the path to the dashboard file.
     pathToSIMDashboard: "monitors/AWSELBMonitor/normalDashboard.json"
     pathToNormalDashboard: "monitors/AWSELBMonitor/normalDashboard.json"
+    periodicDashboardCheckInSeconds: 300
 
 # To upload the dashboard, please create a user from Controller UI or
 # add the credentials of an existing user.
