--- a/src/main/resources/conf/config-sample.yaml
+++ b/src/main/resources/conf/config-sample.yaml
@@ -111,7 +111,7 @@ metricPrefix: "Server|Component:<COMPONENT_ID>|Custom Metrics|Amazon EC2|"
 customDashboard:
     enabled: true
     dashboardName: "AWS ELB Monitor Dashboard"
-
+    sslCertCheckEnabled: false
     # Update the path to the dashboard file.
     pathToSIMDashboard: "monitors/AWSELBMonitor/normalDashboard.json"
     pathToNormalDashboard: "monitors/AWSELBMonitor/normalDashboard.json"
@@ -121,13 +121,20 @@ customDashboard:
 # add the credentials of an existing user.
 
 controllerInfo:
-    controllerHost: ""
-    controllerPort: ""
-    account: ""
-    username: ""
-    password: ""
-    # OPTIONAL Items
+    controllerHost: "host"
+    controllerPort: 9090
+    controllerSslEnabled: false
+    enableOrchestration: false
+    uniqueHostId: ""
+    username: "username"
+    password: "password"
     encryptedPassword: ""
     encryptionKey: ""
-    controllerSslEnabled: ""
+    accountAccessKey: ""
+    account: "account"
+    machinePath: ""
+    simEnabled: false
+    applicationName: "application"
+    tierName: "tier"
+    nodeName: "node"
 
