--- a/src/main/resources/conf/config-template.yaml
+++ b/src/main/resources/conf/config-template.yaml
@@ -119,8 +119,8 @@ controllerInfo:
   enableOrchestration: false # N/A
   uniqueHostId: "" # -Dappdynamics.agent.uniqueHostId
   username: "admin" # -Dappdynamics.agent.monitors.controller.username
-  password: "admin" # -Dappdynamics.agent.monitors.controller.password
-  encryptedPassword: "" # -Dappdynamics.agent.monitors.controller.encryptedPassword
+  password:  # -Dappdynamics.agent.monitors.controller.password
+  encryptedPassword: "j+0oxTzUtw2xAdaq4UUq/Q==" # -Dappdynamics.agent.monitors.controller.encryptedPassword
   accountAccessKey: "" # -Dappdynamics.agent.accountAccessKey
   account: "" # -Dappdynamics.agent.accountName
   machinePath: "" # -Dappdynamics.machine.agent.hierarchyPath
@@ -128,3 +128,6 @@ controllerInfo:
   applicationName: "" # -Dappdynamics.agent.applicationName
   tierName: "" # -Dappdynamics.agent.tierName
   nodeName: "" # -Dappdynamics.agent.nodeName
+
+#Encryption key for your controllerInfo password
+encryptionKey: "abcd"
