--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>sdk-core</artifactId>
 			<version>2.31.12</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.woodstox</groupId>
+			<artifactId>woodstox-core</artifactId>
+			<version>7.1.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
