--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.appdynamics.extensions</groupId>
 	<artifactId>aws-cloudwatch-exts-commons</artifactId>
-	<version>2.2.7</version>
+	<version>2.2.8</version>
 	<packaging>jar</packaging>
 
 	<name>aws-cloudwatch-exts-commons</name>
 
 	<properties>
 		<release.repo.local.dir>../maven-repo</release.repo.local.dir>
+		<aws.sdk.version>2.29.15</aws.sdk.version>
 	</properties>
 
 	<dependencies>
@@ -27,7 +28,7 @@
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.3</version>
+			<version>2.12.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.woodstox</groupId>
@@ -38,46 +39,46 @@
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>cloudwatch</artifactId>
-			<version>2.31.12</version>
+			<version>${aws.sdk.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>apache-client</artifactId>
-			<version>2.31.12</version>
+			<version>${aws.sdk.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>sdk-core</artifactId>
-			<version>2.31.12</version>
+			<version>${aws.sdk.version}</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.fasterxml.woodstox</groupId>
 			<artifactId>woodstox-core</artifactId>
 			<version>7.1.0</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
-			<artifactId>powermock-api-mockito</artifactId>
-			<version>1.4.7</version>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>2.0.9</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-module-junit4</artifactId>
-			<version>1.4.7</version>
+			<version>2.0.9</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.18.2-GA</version>
+			<version>3.29.2-GA</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -87,16 +88,17 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.11.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>
 			<!-- Disabling strict bytecode verification when tests are run to fix the java.lang.VerifyError errors. https://github.com/powermock/powermock/issues/693 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0</version>
 				<configuration>
 					<argLine>-noverify</argLine>
 					<skipTests>true</skipTests>
